Spacing fix on single blog post

--- a/wp-content/themes/mct/styles/modules/_share-social-links.scss
+++ b/wp-content/themes/mct/styles/modules/_share-social-links.scss
@@ -69,6 +69,7 @@
 		&__container{
 			bottom:initial;
 			position:relative;
+			right: 0px;
 		}
 
 		&__container, .ssbp-li--twitter, .ssbp-li--facebook{
